--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_pagina-conteudo.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_pagina-conteudo.scss
@@ -1,7 +1,14 @@
-.pagina-conteudo{
+.pagina-conteudo {
     padding: 15px;
     padding-top: 25px;
     padding-bottom: 25px;
+
+    @media(min-width: $breakpoint-md) {
+        overflow: auto;
+        margin-left: 50px;
+        margin-right: 50px;
+        max-height: 900px;
+    }
 }
 
 .pagina-conteudo p {
@@ -9,6 +16,6 @@
 
 }
 
-.text-center{
+.text-center {
     text-align: center;
 }
