--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/estilo.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/estilo.scss
@@ -7,6 +7,7 @@
 
 @import 'layout/_cabecalho';
 @import 'layout/_container';
+@import 'layout/_alinhamento-img';
 
 @import 'components/_alinhamento-texto';
 @import 'components/_depoimentos';
