--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_pagina-conteudo.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_pagina-conteudo.scss
@@ -5,17 +5,27 @@
     overflow: auto;
 
 
-    @media(min-width: $breakpoint-md) {
-        overflow: auto;
-        margin-left: 50px;
-        margin-right: 50px;
 
+    @media(min-width: $breakpoint-xl) {
+        .pagina-conteudo-2 {
+            margin: auto;
+            padding-left: 130px;
+            padding-right: 130px;
+
+        }
+    }
+
+    @media(min-width: $breakpoint-md) {
+        .pagina-conteudo-2 {
+            margin: auto;
+            padding-left: 90px;
+            padding-right: 90px;
+
+        }
     }
 }
 
-.pagina-conteudo-2 {
-    overflow: auto;
-}
+
 
 .pagina-conteudo p {
     color: $cor-leitura;
@@ -24,4 +34,13 @@
 
 .text-center {
     text-align: center;
+
+}
+
+.par {
+    padding: 4px;
+
+
+
+
 }
