--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_alinhamento-img.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_alinhamento-img.scss
@@ -1,7 +1,13 @@
 .img-left {
+
     @media(min-width: $breakpoint-md) {
         float: left;
+        padding: 9px 0 0 0;
         margin-right: 15px;
         margin-bottom: 15px;
+
+
     }
+
+
 }
