--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_pagina-conteudo.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_pagina-conteudo.scss
@@ -1,12 +1,14 @@
 .pagina-conteudo {
     padding: 15px;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-top: 150px;
+    padding-bottom: 100px;
     overflow: auto;
+    overflow-x: hidden;
 
 
 
-    @media(min-width: $breakpoint-xl) {
+
+    @media(min-width: $breakpoint-md) {
         .pagina-conteudo-2 {
             margin: auto;
             padding-left: 130px;
@@ -15,11 +17,10 @@
         }
     }
 
-    @media(min-width: $breakpoint-md) {
+    @media(min-width: $breakpoint-xl) {
         .pagina-conteudo-2 {
-            margin: auto;
-            padding-left: 90px;
-            padding-right: 90px;
+            padding-left: 150px;
+            padding-right: 140px;
 
         }
     }
