--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_formulario.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_formulario.scss
@@ -6,28 +6,58 @@
     background-color: #efecec;
     margin-left: -15px;
     margin-right: -15px;
-    padding: 40px 15px 40px 15px;
+    padding: 40px 15px 0px 15px;
     box-shadow: 0px 3px 10px #000;
-   
-}
+    overflow: auto;
+    margin-top: 80px;
+    margin-bottom: 80px;
 
 
+    &_label {
+        padding-bottom: 5px;
+    }
 
-.formulario_campo {
-    width: 100%;
-    border: 1px solid #c4c4c4;
-    padding: 10px 5px;
+    &_campo {
+        width: 100%;
+        border: 1px solid #c4c4c4;
+        padding: 10px 5px;
+        margin-top: 5px;
 
-}
+    }
 
-.formulario_botao {
-    border: 3px solid red;
-    color: red;
-    background-color: #fff;
-    border-radius: 15px;
-    padding: 5px 20px;
-    cursor: pointer;
-    display: block;
-    margin: auto;
+    &_botao {
+        border: 3px solid $cor-principal;
+        color: $cor-principal;
+        background-color: #fff;
+        border-radius: 15px;
+        padding: 5px 20px;
+        cursor: pointer;
+        display: block;
+        margin: auto;
+        transform: translateY(-21px);
+
+    }
+
+    @media(min-width: $breakpoint-md) {
+        &_grupo {
+
+            width: 100%;
+
+
+            &--esq {
+
+                float: left;
+                width: 49%;
+                margin-bottom: 5px;
+            }
+
+            &--dir {
+                float: right;
+                width: 49%;
+                margin-bottom: 5px;
+            }
+        }
+
+    }
 
 }
