--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_mapa.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_mapa.scss
@@ -5,6 +5,22 @@
     position: relative;
     overflow: hidden;
     margin: 0 -15px -25px -15px;
+
+    @media(min-width: 450px) {
+        padding-bottom: 70%;
+    }
+
+    @media(min-width: $breakpoint-md) {
+        padding-bottom: 50%;
+    }
+
+    @media(min-width: $breakpoint-lg) {
+        padding-bottom: 30%;
+    }
+
+    @media(min-width: $breakpoint-xl) {
+        padding-bottom: 25%;
+    }
 }
 
 .mapa iframe {
