primeira att de segunda

--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_pagina-conteudo.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_pagina-conteudo.scss
@@ -5,7 +5,9 @@
     overflow: auto;
     overflow-x: hidden;
 
-
+    &_subtitulo{
+        padding-bottom: 70px;
+    }
 
 
     @media(min-width: $breakpoint-md) {
