--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
@@ -1,6 +1,5 @@
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 img {
@@ -69,8 +68,7 @@ h1 {
    * 2. Show the overflow in Edge and IE.
    */
 hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -107,8 +105,7 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -214,9 +211,9 @@ select {
    * Correct the inability to style clickable types in iOS and Safari.
    */
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
 }
 
@@ -224,9 +221,9 @@ button,
    * Remove the inner border and padding in Firefox.
    */
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -235,9 +232,9 @@ button::-moz-focus-inner,
    * Restore the focus styles unset by the previous rule.
    */
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -255,8 +252,7 @@ fieldset {
    *    `fieldset` elements in all browsers.
    */
 legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -288,10 +284,9 @@ textarea {
    * 1. Add the correct box sizing in IE 10.
    * 2. Remove the padding in IE 10.
    */
-[type="checkbox"],
-[type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -300,8 +295,8 @@ textarea {
 /**
    * Correct the cursor style of increment and decrement buttons in Chrome.
    */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -309,7 +304,7 @@ textarea {
    * 1. Correct the odd appearance in Chrome and Safari.
    * 2. Correct the outline style in Safari.
    */
-[type="search"] {
+[type=search] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -319,7 +314,7 @@ textarea {
 /**
    * Remove the inner padding in Chrome and Safari on macOS.
    */
-[type="search"]::-webkit-search-decoration {
+[type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -376,7 +371,7 @@ template {
 @font-face {
     font-family: "Source Sans Pro";
     src: url(../../source-sans-pro/SourceSansPro-Regular.otf);
-  
+
     font-weight: bold;
 }
 
@@ -391,48 +386,41 @@ template {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-Regular.otf");
 }
-
 @font-face {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-Regular.otf");
   font-weight: bold;
 }
-
 @font-face {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-BoldIt.otf");
   font-style: italic;
 }
-
 .cabecalho {
   background: #edeff1;
   margin: 0 -15px;
   position: fixed;
   width: 100%;
   /*
-    @media(max-width: $breakpoint-md) {
-        & {
-            height: 70px;
-        }
-    }
-    */
+  @media(max-width: $breakpoint-md) {
+      & {
+          height: 70px;
+      }
+  }
+  */
 }
-
 .cabecalho-home {
   padding: 150px;
 }
-
 @media (min-width: 768px) {
   .cabecalho {
     min-height: 100px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
   }
   .cabecalho .logo {
     float: left;
     margin-bottom: 0px;
     margin-top: 20px;
-    -webkit-transition: all 400ms ease-out;
     transition: all 400ms ease-out;
   }
   .cabecalho .menu-principal__lista {
@@ -441,11 +429,9 @@ template {
     margin-top: 35px;
   }
 }
-
 @media (min-width: 768px) {
   .cabecalho .logo {
     margin-top: 18px;
-    -webkit-transition: all 400ms ease-out;
     transition: all 400ms ease-out;
   }
 }
@@ -461,28 +447,23 @@ html {
   padding-left: 15px;
   padding-right: 15px;
   overflow: auto;
-  -webkit-transition: all 400ms ease-out;
   transition: all 400ms ease-out;
 }
-
 @media (min-width: 576px) {
   .container {
     width: 540px;
   }
 }
-
 @media (min-width: 768px) {
   .container {
     width: 720px;
   }
 }
-
 @media (min-width: 992px) {
   .container {
     width: 960px;
   }
 }
-
 @media (min-width: 1200px) {
   .container {
     width: 1140px;
@@ -509,47 +490,39 @@ html {
   color: #fff;
   padding: 30px 0;
 }
-
 .depoimentos__item {
   padding: 0px 15px;
 }
-
 .depoimentos__img {
   display: block;
   margin: 0 auto;
-  -webkit-box-shadow: 2px 2px 0 black;
-          box-shadow: 2px 2px 0 black;
+  box-shadow: 2px 2px 0 black;
   margin-bottom: 30px;
 }
-
 .depoimentos__pessoa {
   text-align: center;
   font-weight: bold;
   font-style: italic;
 }
-
 .depoimentos__pessoa::before {
   content: "";
   border-left: 2.2px solid #fff;
   color: #fff;
   margin-right: 5px;
 }
-
 .depoimentos__texto {
   line-height: 23px;
   padding: 0px 8px;
 }
-
 .depoimentos__texto::before {
   background-image: url(imagens/img/aspas.png);
   background-repeat: no-repeat;
-  content: '';
+  content: "";
   display: inline-block;
   width: 25px;
   height: 23px;
   margin-right: 5px;
 }
-
 @media (min-width: 768px) {
   .depoimentos {
     padding: 150px 0px;
@@ -577,24 +550,20 @@ html {
   margin-left: -15px;
   margin-right: -15px;
   padding: 40px 15px 0px 15px;
-  -webkit-box-shadow: 0px 3px 10px #000;
-          box-shadow: 0px 3px 10px #000;
+  box-shadow: 0px 3px 10px #000;
   overflow: auto;
   margin-top: 80px;
   margin-bottom: 80px;
 }
-
 .formulario_label {
   padding-bottom: 5px;
 }
-
 .formulario_campo {
   width: 100%;
   border: 1px solid #c4c4c4;
   padding: 10px 5px;
   margin-top: 5px;
 }
-
 .formulario_botao {
   border: 3px solid #f44242;
   color: #f44242;
@@ -604,10 +573,8 @@ html {
   cursor: pointer;
   display: block;
   margin: auto;
-  -webkit-transform: translateY(-21px);
-          transform: translateY(-21px);
+  transform: translateY(-21px);
 }
-
 @media (min-width: 768px) {
   .formulario_grupo {
     width: 100%;
@@ -633,10 +600,8 @@ html {
   text-indent: -9999px;
   margin: 0;
   margin-left: 15px;
-  -webkit-transition: all 400ms ease-out;
   transition: all 400ms ease-out;
 }
-
 @media (max-width: 768px) {
   .logo {
     margin-top: 5px;
@@ -656,25 +621,21 @@ html {
   overflow: hidden;
   margin: 0 -15px -25px -15px;
 }
-
 @media (min-width: 450px) {
   .mapa {
     padding-bottom: 70%;
   }
 }
-
 @media (min-width: 768px) {
   .mapa {
     padding-bottom: 50%;
   }
 }
-
 @media (min-width: 992px) {
   .mapa {
     padding-bottom: 30%;
   }
 }
-
 @media (min-width: 1200px) {
   .mapa {
     padding-bottom: 25%;
@@ -706,31 +667,25 @@ html {
   top: 15px;
   right: 15px;
 }
-
 @media (min-width: 768px) {
   .menu-principal__btn {
     display: none;
   }
 }
-
 .menu-principal__lista {
   padding: 0%;
-  -webkit-transition: margin 300ms ease-out;
   transition: margin 300ms ease-out;
 }
-
 @media (min-width: 768px) {
   .menu-principal__lista li {
     display: inline-block;
     margin: 0px 10px;
   }
 }
-
 .menu-principal__lista li {
   margin-left: 15px;
   list-style: none;
 }
-
 .menu-principal__item {
   margin-bottom: 20px;
   display: block;
@@ -738,14 +693,11 @@ html {
   font-weight: bold;
   color: #343434;
   font-size: 18px;
-  -webkit-transition: all 300ms ease-out;
   transition: all 300ms ease-out;
 }
-
 .menu-principal__item--atual {
   color: #f44242;
 }
-
 @media (max-width: 767px) {
   .menu-principal--fechado .menu-principal__btn {
     background-position: 5px 5px;
@@ -800,7 +752,9 @@ html {
   overflow: auto;
   overflow-x: hidden;
 }
-
+.pagina-conteudo_subtitulo {
+  padding-bottom: 70px;
+}
 @media (min-width: 768px) {
   .pagina-conteudo .pagina-conteudo-2 {
     margin: auto;
@@ -808,7 +762,6 @@ html {
     padding-right: 130px;
   }
 }
-
 @media (min-width: 1200px) {
   .pagina-conteudo .pagina-conteudo-2 {
     padding-left: 150px;
@@ -831,42 +784,35 @@ html {
 .rodape {
   padding: 0px 0px;
 }
-
 .rodape .logo {
   color: white;
   margin-bottom: 20px;
 }
-
 .rodape__linha-1 {
   background-color: #272525;
   padding: 15px 25px;
   background-image: url(imagens/img/rodape-bg.jpg);
   background-size: cover;
 }
-
 .rodape__linha-2 {
   background-color: black;
   text-align: center;
   color: white;
   padding: 15px;
 }
-
 .rodape_coluna {
   margin-top: 30px;
   color: #fff;
 }
-
 .rodape_titulo {
   border-bottom: 1px solid #fff;
   padding: 0 10px 10px 10px;
   font-size: 18px;
 }
-
 .rodape_lista {
   padding: 0%;
   list-style: none;
 }
-
 @media (min-width: 768px) {
   .rodape_coluna {
     float: left;
@@ -889,7 +835,7 @@ html {
 }
 
 .lista_item::before {
-  content: '>';
+  content: ">";
   margin-right: 8px;
   color: #f44242;
 }
@@ -940,7 +886,6 @@ img {
 .servico {
   padding: 30px 0px;
 }
-
 @media (min-width: 768px) {
   .servico {
     overflow: auto;
@@ -951,7 +896,6 @@ img {
   text-align: center;
   padding: 0px 15px;
 }
-
 @media (min-width: 768px) {
   .servico__item {
     float: left;
@@ -975,7 +919,6 @@ img {
   padding-top: 80px;
   padding-bottom: 80px;
 }
-
 @media (min-width: 768px) {
   .pagina-contato {
     padding-left: 150px;
@@ -991,16 +934,13 @@ img {
   padding: 50px 0px;
   padding-top: 150px;
 }
-
 .cabecalho-home__role {
   display: none;
 }
-
 .cabecalho-home__titulo {
   font-size: 30px;
   margin-bottom: 0;
 }
-
 .cabecalho-home__subtitulo {
   display: block;
   font-size: 15px;
@@ -1009,7 +949,6 @@ img {
   margin: auto;
   margin-top: 10px;
 }
-
 @media (min-width: 992px) {
   .cabecalho-home {
     height: 100vh;
@@ -1039,7 +978,6 @@ img {
     margin-left: -115px;
   }
 }
-
 @media (min-width: 1200px) {
   .cabecalho-home {
     background-image: url(imagens/img/cabecalho-home-bg-xl.jpg);
@@ -1051,11 +989,11 @@ img {
 .home__titulo {
   text-align: center;
   text-transform: uppercase;
+  margin-top: 55px;
   margin-bottom: 55px;
 }
-
 .home__titulo::after {
-  content: '';
+  content: "";
   display: block;
   width: 50px;
   height: 3px;
@@ -1063,9 +1001,12 @@ img {
   margin: 0px auto;
   margin-top: 15px;
 }
-
 .home__titulo--branco::after {
   background-color: #fff;
+}
+
+.servicos {
+  margin-bottom: 40px;
 }
 
 .lista-trabalhos {
@@ -1091,4 +1032,7 @@ img {
   border-left: 1px solid #000;
   padding-left: 15px;
 }
-/*# sourceMappingURL=estilo.css.map */
+
+.subtitulo_sobre-nos {
+  padding-bottom: 70px;
+}
