--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_rodape.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_rodape.scss
@@ -96,6 +96,7 @@ img {
     text-align: center;
 }
 
+/*
 .lista-trabalhos {
     list-style: none;
     padding: 0;
@@ -125,3 +126,5 @@ img {
 .margem_mapa {
     margin-top: 25px;
 }
+
+*/
