--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_portfolio.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_portfolio.scss
@@ -2,23 +2,108 @@
     list-style: none;
     padding: 0;
     overflow: hidden;
-}
 
-.lista-trabalhos__item {
-    margin-left: -25px;
-    margin-right: -25px;
-    margin-bottom: 50px;
 
-}
+    &__item {
+        margin-left: -25px;
+        margin-right: -25px;
+        margin-bottom: 50px;
 
-.lista-trabalhos__item a {
-    text-decoration: none;
-}
 
-.lista-trabalhos__titulos {
-    color: black;
-    font-size: 18px;
-    margin-left: 15px;
-    border-left: 1px solid #000;
-    padding-left: 15px;
+    }
+
+    &__item a {
+        text-decoration: none;
+    }
+
+    &__titulos {
+        color: black;
+        font-size: 18px;
+        margin-left: 15px;
+
+        padding-left: 15px;
+    }
+
+    @media(min-width: $breakpoint-md) {
+
+
+
+        &__item {
+            margin: auto;
+            float: left;
+            width: 45%;
+            // margin-left: 5px;
+            height: auto;
+            margin-left: 10px;
+
+
+        }
+
+        &__img {
+
+            margin-left: 5px;
+        }
+
+
+
+    }
+
+    @media(min-width: $breakpoint-lg) {
+
+
+
+        &__img {
+            margin: 0;
+            opacity: 1;
+
+
+        }
+
+
+        &__item {
+            margin-left: 0px;
+            margin: 0;
+            float: left;
+            width: 33.333%;
+            height: auto;
+            position: relative;
+            background-color: $cor-principal;
+
+            &:hover {
+
+                .lista-trabalhos__img {
+                    opacity: 0.1;
+                }
+
+                .lista-trabalhos__titulos {
+                    opacity: 1;
+                }
+
+
+            }
+        }
+
+
+        &__titulos {
+            font-size: 22px;
+            width: 100%;
+            margin: 0 auto;
+            padding: 0%;
+            border: none;
+            position: absolute;
+            top: 35%;
+            text-align: center;
+            color: #fff;
+            background: url(imagens/img/icone-olho.png) no-repeat bottom center;
+            padding-bottom: 35px;
+            opacity: 0;
+
+
+
+
+        }
+
+
+
+    }
 }
