--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
@@ -409,6 +409,7 @@ template {
   margin: 0 -15px;
   position: fixed;
   width: 100%;
+  z-index: 1;
   /*
     @media(max-width: $breakpoint-md) {
         & {
@@ -1082,6 +1083,18 @@ img {
   margin-bottom: 40px;
 }
 
+.pagina-portifolio {
+  width: 102%;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  margin: 0 auto;
+  margin-left: -15px;
+  overflow: auto;
+  -webkit-transition: all 400ms ease-out;
+  transition: all 400ms ease-out;
+  z-index: 2;
+}
+
 .lista-trabalhos {
   list-style: none;
   padding: 0;
@@ -1131,6 +1144,7 @@ img {
     height: auto;
     position: relative;
     background-color: #f44242;
+    margin-bottom: -3px;
   }
   .lista-trabalhos__item:hover .lista-trabalhos__img {
     opacity: 0.1;
