--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_portfolio.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_portfolio.scss
@@ -67,6 +67,8 @@
         &__img {
             margin: 0;
             opacity: 1;
+            height: 100%;
+            width: 100%;
 
 
         }
