--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/base/_meu-reset.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/base/_meu-reset.scss
@@ -12,8 +12,8 @@ img {
 body {
     font-family: "Source Sans Pro";
     overflow-x: hidden;
-
-    padding: 0 15px;
+    width: 102%;
+    padding: 0 ;
     height: 100%;
 
 }
