--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_rodape.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_rodape.scss
@@ -78,12 +78,13 @@
     color: $cor-principal;
 }
 
+/*
 img {
     max-width: 100%;
     height: auto;
 }
 
-
+*/
 
 .pagina-conteudo p {
     color: $cor-leitura;
