segunda att do almoço

--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_portfolio.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_portfolio.scss
@@ -7,6 +7,7 @@
     overflow: auto;
     transition: all 400ms ease-out;
     z-index: 2;
+    margin-right: -13px;
 }
 
 .lista-trabalhos {
@@ -35,7 +36,7 @@
 
         padding-left: 15px;
         content: "";
-            border-left: 2.5px solid black;
+            border-left: 2.2px solid black;
             padding-left: 5px;
 
        
