--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_pagina-conteudo.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_pagina-conteudo.scss
@@ -5,8 +5,9 @@
     overflow: auto;
     overflow-x: hidden;
 
-    &_subtitulo{
+    &_subtitulo {
         padding-bottom: 70px;
+        padding-right: 15px;
     }
 
 
