--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_depoimentos.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_depoimentos.scss
@@ -4,7 +4,8 @@
     background-attachment: fixed;
     color: #fff;
     padding: 30px 0;
-
+    margin-right: -15px;
+    padding-right: 15px;
 
     &__item {
         padding: 0px 15px;
