--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
@@ -3,11 +3,12 @@
     //margin: 0 ;
     position: fixed;
     width: 101%;
-    
     z-index: 1;
+    box-shadow: 0px 0px 7px 0px #000;
 
     &-home {
         padding: 150px;
+
     }
 
     /*
