--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_pagina-inicial.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/pages/_pagina-inicial.scss
@@ -7,6 +7,8 @@
     text-align: center;
     padding: 50px 0px;
     padding-top: 150px;
+    margin-right: -15px;
+    padding-right: 15px;
 
     &__role {
         display: none;
@@ -96,6 +98,6 @@
     }
 }
 
-.servicos{
+.servicos {
     margin-bottom: 40px;
 }
