--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/layout/_cabecalho.scss
@@ -18,6 +18,9 @@
         }
     }
     */
+    @media(max-width: $breakpoint-md){
+        min-height: 70px;
+    }
 
     @media(min-width:$breakpoint-md) {
         min-height: 100px;
