--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
@@ -1,6 +1,5 @@
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 img {
@@ -70,8 +69,7 @@ h1 {
    * 2. Show the overflow in Edge and IE.
    */
 hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -108,8 +106,7 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -215,9 +212,9 @@ select {
    * Correct the inability to style clickable types in iOS and Safari.
    */
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
 }
 
@@ -225,9 +222,9 @@ button,
    * Remove the inner border and padding in Firefox.
    */
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -236,9 +233,9 @@ button::-moz-focus-inner,
    * Restore the focus styles unset by the previous rule.
    */
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -256,8 +253,7 @@ fieldset {
    *    `fieldset` elements in all browsers.
    */
 legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -289,10 +285,9 @@ textarea {
    * 1. Add the correct box sizing in IE 10.
    * 2. Remove the padding in IE 10.
    */
-[type="checkbox"],
-[type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -301,8 +296,8 @@ textarea {
 /**
    * Correct the cursor style of increment and decrement buttons in Chrome.
    */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -310,7 +305,7 @@ textarea {
    * 1. Correct the odd appearance in Chrome and Safari.
    * 2. Correct the outline style in Safari.
    */
-[type="search"] {
+[type=search] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -320,7 +315,7 @@ textarea {
 /**
    * Remove the inner padding in Chrome and Safari on macOS.
    */
-[type="search"]::-webkit-search-decoration {
+[type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -377,7 +372,7 @@ template {
 @font-face {
     font-family: "Source Sans Pro";
     src: url(../../source-sans-pro/SourceSansPro-Regular.otf);
-  
+
     font-weight: bold;
 }
 
@@ -392,50 +387,47 @@ template {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-Regular.otf");
 }
-
 @font-face {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-Regular.otf");
   font-weight: bold;
 }
-
 @font-face {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-BoldIt.otf");
   font-style: italic;
 }
-
 .cabecalho {
   background: #edeff1;
   position: fixed;
   width: 101%;
   z-index: 1;
-  -webkit-box-shadow: 0px 0px 7px 0px #000;
-          box-shadow: 0px 0px 7px 0px #000;
+  box-shadow: 0px 0px 7px 0px #000;
   /*
-    @media(max-width: $breakpoint-sm) {
-        & {
-          width: 100%;
-        }
-    }
-    */
+  @media(max-width: $breakpoint-sm) {
+      & {
+        width: 100%;
+      }
+  }
+  */
 }
-
 .cabecalho-home {
   padding: 150px;
 }
-
+@media (max-width: 768px) {
+  .cabecalho {
+    min-height: 70px;
+  }
+}
 @media (min-width: 768px) {
   .cabecalho {
     min-height: 100px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
   }
   .cabecalho .logo {
     float: left;
     margin-bottom: 0px;
     margin-top: 20px;
-    -webkit-transition: all 400ms ease-out;
     transition: all 400ms ease-out;
   }
   .cabecalho .menu-principal__lista {
@@ -444,11 +436,9 @@ template {
     margin-top: 35px;
   }
 }
-
 @media (min-width: 768px) {
   .cabecalho .logo {
     margin-top: 18px;
-    -webkit-transition: all 400ms ease-out;
     transition: all 400ms ease-out;
   }
 }
@@ -464,28 +454,23 @@ html {
   padding-left: 15px;
   padding-right: 15px;
   overflow: auto;
-  -webkit-transition: all 400ms ease-out;
   transition: all 400ms ease-out;
 }
-
 @media (min-width: 576px) {
   .container {
     width: 540px;
   }
 }
-
 @media (min-width: 768px) {
   .container {
     width: 720px;
   }
 }
-
 @media (min-width: 992px) {
   .container {
     width: 960px;
   }
 }
-
 @media (min-width: 1200px) {
   .container {
     width: 1140px;
@@ -514,47 +499,39 @@ html {
   margin-right: -15px;
   padding-right: 15px;
 }
-
 .depoimentos__item {
   padding: 0px 15px;
 }
-
 .depoimentos__img {
   display: block;
   margin: 0 auto;
-  -webkit-box-shadow: 2px 2px 0 black;
-          box-shadow: 2px 2px 0 black;
+  box-shadow: 2px 2px 0 black;
   margin-bottom: 30px;
 }
-
 .depoimentos__pessoa {
   text-align: center;
   font-weight: bold;
   font-style: italic;
 }
-
 .depoimentos__pessoa::before {
   content: "";
   border-left: 2.2px solid #fff;
   color: #fff;
   margin-right: 5px;
 }
-
 .depoimentos__texto {
   line-height: 23px;
   padding: 0px 8px;
 }
-
 .depoimentos__texto::before {
   background-image: url(imagens/img/aspas.png);
   background-repeat: no-repeat;
-  content: '';
+  content: "";
   display: inline-block;
   width: 25px;
   height: 23px;
   margin-right: 5px;
 }
-
 @media (min-width: 768px) {
   .depoimentos {
     padding: 150px 0px;
@@ -582,24 +559,20 @@ html {
   margin-left: -15px;
   margin-right: -15px;
   padding: 40px 15px 0px 15px;
-  -webkit-box-shadow: 0px 3px 10px #000;
-          box-shadow: 0px 3px 10px #000;
+  box-shadow: 0px 3px 10px #000;
   overflow: auto;
   margin-top: 80px;
   margin-bottom: 80px;
 }
-
 .formulario_label {
   padding-bottom: 5px;
 }
-
 .formulario_campo {
   width: 100%;
   border: 1px solid #c4c4c4;
   padding: 10px 5px;
   margin-top: 5px;
 }
-
 .formulario_botao {
   border: 3px solid #f44242;
   color: #f44242;
@@ -609,10 +582,8 @@ html {
   cursor: pointer;
   display: block;
   margin: auto;
-  -webkit-transform: translateY(-21px);
-          transform: translateY(-21px);
+  transform: translateY(-21px);
 }
-
 @media (min-width: 768px) {
   .formulario_grupo {
     width: 100%;
@@ -638,10 +609,8 @@ html {
   text-indent: -9999px;
   margin: 0;
   margin-left: 15px;
-  -webkit-transition: all 400ms ease-out;
   transition: all 400ms ease-out;
 }
-
 @media (max-width: 768px) {
   .logo {
     margin-top: 5px;
@@ -661,25 +630,21 @@ html {
   overflow: hidden;
   margin: 0 -15px -25px -15px;
 }
-
 @media (min-width: 450px) {
   .mapa {
     padding-bottom: 70%;
   }
 }
-
 @media (min-width: 768px) {
   .mapa {
     padding-bottom: 50%;
   }
 }
-
 @media (min-width: 992px) {
   .mapa {
     padding-bottom: 30%;
   }
 }
-
 @media (min-width: 1200px) {
   .mapa {
     padding-bottom: 25%;
@@ -711,62 +676,51 @@ html {
   top: 15px;
   right: 15px;
 }
-
 @media (max-width: 768px) {
   .menu-principal__btn {
     margin-right: 5%;
     top: 9px;
   }
 }
-
 @media (min-width: 768px) {
   .menu-principal__btn {
     display: none;
   }
 }
-
 .menu-principal__lista {
   padding: 0%;
-  -webkit-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
+  transition: margin 500ms ease-out;
 }
-
 @media (min-width: 768px) {
   .menu-principal__lista li {
     display: inline-block;
     margin: 0px 10px;
   }
 }
-
 .menu-principal__lista li {
   margin-left: 15px;
   list-style: none;
 }
-
 .menu-principal__item {
+  height: 20px;
   margin-bottom: 20px;
   display: block;
   text-decoration: none;
   font-weight: bold;
   color: #343434;
   font-size: 18px;
-  -webkit-transition: all 300ms ease-out;
   transition: all 300ms ease-out;
 }
-
 .menu-principal__item--atual {
   color: #f44242;
 }
-
 @media (max-width: 767px) {
   .menu-principal--fechado .menu-principal__btn {
     background-position: 5px 5px;
-    -webkit-transition: all 100ms ease-out;
     transition: all 100ms ease-out;
   }
   .menu-principal--fechado .menu-principal__lista {
     margin: 0;
-    height: 10px;
   }
   .menu-principal--fechado .menu-principal__item {
     margin: 0;
@@ -809,12 +763,10 @@ html {
   overflow: auto;
   overflow-x: hidden;
 }
-
 .pagina-conteudo_subtitulo {
   padding-bottom: 70px;
   padding-right: 15px;
 }
-
 @media (min-width: 768px) {
   .pagina-conteudo .pagina-conteudo-2 {
     margin: auto;
@@ -822,7 +774,6 @@ html {
     padding-right: 130px;
   }
 }
-
 @media (min-width: 1200px) {
   .pagina-conteudo .pagina-conteudo-2 {
     padding-left: 150px;
@@ -845,12 +796,10 @@ html {
 .rodape {
   padding: 0px 0px;
 }
-
 .rodape .logo {
   color: white;
   margin-bottom: 20px;
 }
-
 .rodape__linha-1 {
   background-color: #272525;
   padding: 15px 25px;
@@ -858,7 +807,6 @@ html {
   background-size: cover;
   margin-right: -15px;
 }
-
 .rodape__linha-2 {
   background-color: black;
   text-align: center;
@@ -867,23 +815,19 @@ html {
   margin-right: -15px;
   padding-left: 0px;
 }
-
 .rodape_coluna {
   margin-top: 30px;
   color: #fff;
 }
-
 .rodape_titulo {
   border-bottom: 1px solid #fff;
   padding: 0 10px 10px 10px;
   font-size: 18px;
 }
-
 .rodape_lista {
   padding: 0%;
   list-style: none;
 }
-
 @media (min-width: 768px) {
   .rodape_coluna {
     float: left;
@@ -906,7 +850,7 @@ html {
 }
 
 .lista_item::before {
-  content: '>';
+  content: ">";
   margin-right: 8px;
   color: #f44242;
 }
@@ -964,7 +908,6 @@ img {
 .servico {
   padding: 30px 0px;
 }
-
 @media (min-width: 768px) {
   .servico {
     overflow: auto;
@@ -975,7 +918,6 @@ img {
   text-align: center;
   padding: 0px 15px;
 }
-
 @media (min-width: 768px) {
   .servico__item {
     float: left;
@@ -999,7 +941,6 @@ img {
   padding-top: 80px;
   padding-bottom: 80px;
 }
-
 @media (min-width: 768px) {
   .pagina-contato {
     padding-left: 150px;
@@ -1017,16 +958,13 @@ img {
   margin-right: -15px;
   padding-right: 15px;
 }
-
 .cabecalho-home__role {
   display: none;
 }
-
 .cabecalho-home__titulo {
   font-size: 30px;
   margin-bottom: 0;
 }
-
 .cabecalho-home__subtitulo {
   display: block;
   font-size: 15px;
@@ -1035,7 +973,6 @@ img {
   margin: auto;
   margin-top: 10px;
 }
-
 @media (min-width: 992px) {
   .cabecalho-home {
     height: 100vh;
@@ -1065,7 +1002,6 @@ img {
     margin-left: -115px;
   }
 }
-
 @media (min-width: 1200px) {
   .cabecalho-home {
     background-image: url(imagens/img/cabecalho-home-bg-xl.jpg);
@@ -1080,9 +1016,8 @@ img {
   margin-top: 55px;
   margin-bottom: 55px;
 }
-
 .home__titulo::after {
-  content: '';
+  content: "";
   display: block;
   width: 50px;
   height: 3px;
@@ -1090,7 +1025,6 @@ img {
   margin: 0px auto;
   margin-top: 15px;
 }
-
 .home__titulo--branco::after {
   background-color: #fff;
 }
@@ -1104,7 +1038,6 @@ img {
   padding-bottom: 100px;
   margin: 0 auto;
   overflow: auto;
-  -webkit-transition: all 400ms ease-out;
   transition: all 400ms ease-out;
   margin-right: -13px;
   z-index: 2;
@@ -1115,15 +1048,12 @@ img {
   padding: 0;
   overflow: hidden;
 }
-
 .lista-trabalhos__item {
   margin-bottom: 50px;
 }
-
 .lista-trabalhos__item a {
   text-decoration: none;
 }
-
 .lista-trabalhos__titulos {
   color: black;
   font-size: 18px;
@@ -1133,14 +1063,12 @@ img {
   border-left: 2.2px solid black;
   padding-left: 5px;
 }
-
 @media (max-width: 768px) {
   .lista-trabalhos__img {
     width: 100%;
     height: auto;
   }
 }
-
 @media (min-width: 768px) {
   .lista-trabalhos__item {
     margin: auto;
@@ -1152,7 +1080,6 @@ img {
     display: block;
   }
 }
-
 @media (min-width: 992px) {
   .lista-trabalhos__img {
     margin: 0;
@@ -1172,14 +1099,11 @@ img {
   }
   .lista-trabalhos__item:hover .lista-trabalhos__img {
     opacity: 0.1;
-    -webkit-transition: all 600ms ease-out;
     transition: all 600ms ease-out;
-    -webkit-transform: scale(1.5);
-            transform: scale(1.5);
+    transform: scale(1.5);
   }
   .lista-trabalhos__item:hover .lista-trabalhos__titulos {
     opacity: 1;
-    -webkit-transition: all 900ms ease-out;
     transition: all 900ms ease-out;
   }
   .lista-trabalhos__titulos {
@@ -1201,4 +1125,3 @@ img {
 .subtitulo_sobre-nos {
   padding-bottom: 70px;
 }
-/*# sourceMappingURL=estilo.css.map */
