--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/estilo.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/estilo.scss
@@ -26,4 +26,5 @@
 @import 'pages/_portfolio';
 @import 'pages/_sobre-nos';
 
-@import 'vendors/_slick.scss'
+@import 'vendors/_slick.scss';
+@import 'vendors/_slick-theme';
