--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/estilo.css
@@ -1,5 +1,7 @@
+@charset "UTF-8";
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 img {
@@ -69,7 +71,8 @@ h1 {
    * 2. Show the overflow in Edge and IE.
    */
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -106,7 +109,8 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -212,9 +216,9 @@ select {
    * Correct the inability to style clickable types in iOS and Safari.
    */
 button,
-[type=button],
-[type=reset],
-[type=submit] {
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
 }
 
@@ -222,9 +226,9 @@ button,
    * Remove the inner border and padding in Firefox.
    */
 button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -233,9 +237,9 @@ button::-moz-focus-inner,
    * Restore the focus styles unset by the previous rule.
    */
 button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -253,7 +257,8 @@ fieldset {
    *    `fieldset` elements in all browsers.
    */
 legend {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -285,9 +290,10 @@ textarea {
    * 1. Add the correct box sizing in IE 10.
    * 2. Remove the padding in IE 10.
    */
-[type=checkbox],
-[type=radio] {
-  box-sizing: border-box;
+[type="checkbox"],
+[type="radio"] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -296,8 +302,8 @@ textarea {
 /**
    * Correct the cursor style of increment and decrement buttons in Chrome.
    */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -305,7 +311,7 @@ textarea {
    * 1. Correct the odd appearance in Chrome and Safari.
    * 2. Correct the outline style in Safari.
    */
-[type=search] {
+[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -315,7 +321,7 @@ textarea {
 /**
    * Remove the inner padding in Chrome and Safari on macOS.
    */
-[type=search]::-webkit-search-decoration {
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -372,7 +378,7 @@ template {
 @font-face {
     font-family: "Source Sans Pro";
     src: url(../../source-sans-pro/SourceSansPro-Regular.otf);
-
+  
     font-weight: bold;
 }
 
@@ -387,47 +393,56 @@ template {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-Regular.otf");
 }
+
 @font-face {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-Regular.otf");
   font-weight: bold;
 }
+
 @font-face {
   font-family: "Source Sans Pro";
   src: url("source-sans-pro/source-sans-pro/SourceSansPro-BoldIt.otf");
   font-style: italic;
 }
+
 .cabecalho {
   background: #edeff1;
   position: fixed;
   width: 101%;
   z-index: 1;
-  box-shadow: 0px 0px 7px 0px #000;
+  -webkit-box-shadow: 0px 0px 7px 0px #000;
+          box-shadow: 0px 0px 7px 0px #000;
   /*
-  @media(max-width: $breakpoint-sm) {
-      & {
-        width: 100%;
-      }
-  }
-  */
+    @media(max-width: $breakpoint-sm) {
+        & {
+          width: 100%;
+        }
+    }
+    */
 }
+
 .cabecalho-home {
   padding: 150px;
 }
+
 @media (max-width: 768px) {
   .cabecalho {
     min-height: 70px;
   }
 }
+
 @media (min-width: 768px) {
   .cabecalho {
     min-height: 100px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
   }
   .cabecalho .logo {
     float: left;
     margin-bottom: 0px;
     margin-top: 20px;
+    -webkit-transition: all 400ms ease-out;
     transition: all 400ms ease-out;
   }
   .cabecalho .menu-principal__lista {
@@ -436,9 +451,11 @@ template {
     margin-top: 35px;
   }
 }
+
 @media (min-width: 768px) {
   .cabecalho .logo {
     margin-top: 18px;
+    -webkit-transition: all 400ms ease-out;
     transition: all 400ms ease-out;
   }
 }
@@ -454,23 +471,28 @@ html {
   padding-left: 15px;
   padding-right: 15px;
   overflow: auto;
+  -webkit-transition: all 400ms ease-out;
   transition: all 400ms ease-out;
 }
+
 @media (min-width: 576px) {
   .container {
     width: 540px;
   }
 }
+
 @media (min-width: 768px) {
   .container {
     width: 720px;
   }
 }
+
 @media (min-width: 992px) {
   .container {
     width: 960px;
   }
 }
+
 @media (min-width: 1200px) {
   .container {
     width: 1140px;
@@ -499,39 +521,52 @@ html {
   margin-right: -15px;
   padding-right: 15px;
 }
+
+.depoimentos__caixa {
+  max-width: 750px;
+  margin: 0 auto;
+}
+
 .depoimentos__item {
   padding: 0px 15px;
 }
+
 .depoimentos__img {
   display: block;
   margin: 0 auto;
-  box-shadow: 2px 2px 0 black;
+  -webkit-box-shadow: 2px 2px 0 black;
+          box-shadow: 2px 2px 0 black;
   margin-bottom: 30px;
 }
+
 .depoimentos__pessoa {
   text-align: center;
   font-weight: bold;
   font-style: italic;
 }
+
 .depoimentos__pessoa::before {
   content: "";
   border-left: 2.2px solid #fff;
   color: #fff;
   margin-right: 5px;
 }
+
 .depoimentos__texto {
   line-height: 23px;
   padding: 0px 8px;
 }
+
 .depoimentos__texto::before {
   background-image: url(imagens/img/aspas.png);
   background-repeat: no-repeat;
-  content: "";
+  content: '';
   display: inline-block;
   width: 25px;
   height: 23px;
   margin-right: 5px;
 }
+
 @media (min-width: 768px) {
   .depoimentos {
     padding: 150px 0px;
@@ -559,20 +594,24 @@ html {
   margin-left: -15px;
   margin-right: -15px;
   padding: 40px 15px 0px 15px;
-  box-shadow: 0px 3px 10px #000;
+  -webkit-box-shadow: 0px 3px 10px #000;
+          box-shadow: 0px 3px 10px #000;
   overflow: auto;
   margin-top: 80px;
   margin-bottom: 80px;
 }
+
 .formulario_label {
   padding-bottom: 5px;
 }
+
 .formulario_campo {
   width: 100%;
   border: 1px solid #c4c4c4;
   padding: 10px 5px;
   margin-top: 5px;
 }
+
 .formulario_botao {
   border: 3px solid #f44242;
   color: #f44242;
@@ -582,8 +621,10 @@ html {
   cursor: pointer;
   display: block;
   margin: auto;
-  transform: translateY(-21px);
+  -webkit-transform: translateY(-21px);
+          transform: translateY(-21px);
 }
+
 @media (min-width: 768px) {
   .formulario_grupo {
     width: 100%;
@@ -609,8 +650,10 @@ html {
   text-indent: -9999px;
   margin: 0;
   margin-left: 15px;
+  -webkit-transition: all 400ms ease-out;
   transition: all 400ms ease-out;
 }
+
 @media (max-width: 768px) {
   .logo {
     margin-top: 5px;
@@ -630,21 +673,25 @@ html {
   overflow: hidden;
   margin: 0 -15px -25px -15px;
 }
+
 @media (min-width: 450px) {
   .mapa {
     padding-bottom: 70%;
   }
 }
+
 @media (min-width: 768px) {
   .mapa {
     padding-bottom: 50%;
   }
 }
+
 @media (min-width: 992px) {
   .mapa {
     padding-bottom: 30%;
   }
 }
+
 @media (min-width: 1200px) {
   .mapa {
     padding-bottom: 25%;
@@ -676,31 +723,38 @@ html {
   top: 15px;
   right: 15px;
 }
+
 @media (max-width: 768px) {
   .menu-principal__btn {
     margin-right: 5%;
     top: 9px;
   }
 }
+
 @media (min-width: 768px) {
   .menu-principal__btn {
     display: none;
   }
 }
+
 .menu-principal__lista {
   padding: 0%;
+  -webkit-transition: margin 500ms ease-out;
   transition: margin 500ms ease-out;
 }
+
 @media (min-width: 768px) {
   .menu-principal__lista li {
     display: inline-block;
     margin: 0px 10px;
   }
 }
+
 .menu-principal__lista li {
   margin-left: 15px;
   list-style: none;
 }
+
 .menu-principal__item {
   height: 20px;
   margin-bottom: 20px;
@@ -709,14 +763,18 @@ html {
   font-weight: bold;
   color: #343434;
   font-size: 18px;
+  -webkit-transition: all 300ms ease-out;
   transition: all 300ms ease-out;
 }
+
 .menu-principal__item--atual {
   color: #f44242;
 }
+
 @media (max-width: 767px) {
   .menu-principal--fechado .menu-principal__btn {
     background-position: 5px 5px;
+    -webkit-transition: all 100ms ease-out;
     transition: all 100ms ease-out;
   }
   .menu-principal--fechado .menu-principal__lista {
@@ -763,10 +821,12 @@ html {
   overflow: auto;
   overflow-x: hidden;
 }
+
 .pagina-conteudo_subtitulo {
   padding-bottom: 70px;
   padding-right: 15px;
 }
+
 @media (min-width: 768px) {
   .pagina-conteudo .pagina-conteudo-2 {
     margin: auto;
@@ -774,6 +834,7 @@ html {
     padding-right: 130px;
   }
 }
+
 @media (min-width: 1200px) {
   .pagina-conteudo .pagina-conteudo-2 {
     padding-left: 150px;
@@ -796,10 +857,12 @@ html {
 .rodape {
   padding: 0px 0px;
 }
+
 .rodape .logo {
   color: white;
   margin-bottom: 20px;
 }
+
 .rodape__linha-1 {
   background-color: #272525;
   padding: 15px 25px;
@@ -807,6 +870,7 @@ html {
   background-size: cover;
   margin-right: -15px;
 }
+
 .rodape__linha-2 {
   background-color: black;
   text-align: center;
@@ -815,19 +879,23 @@ html {
   margin-right: -15px;
   padding-left: 0px;
 }
+
 .rodape_coluna {
   margin-top: 30px;
   color: #fff;
 }
+
 .rodape_titulo {
   border-bottom: 1px solid #fff;
   padding: 0 10px 10px 10px;
   font-size: 18px;
 }
+
 .rodape_lista {
   padding: 0%;
   list-style: none;
 }
+
 @media (min-width: 768px) {
   .rodape_coluna {
     float: left;
@@ -850,7 +918,7 @@ html {
 }
 
 .lista_item::before {
-  content: ">";
+  content: '>';
   margin-right: 8px;
   color: #f44242;
 }
@@ -908,6 +976,7 @@ img {
 .servico {
   padding: 30px 0px;
 }
+
 @media (min-width: 768px) {
   .servico {
     overflow: auto;
@@ -918,6 +987,7 @@ img {
   text-align: center;
   padding: 0px 15px;
 }
+
 @media (min-width: 768px) {
   .servico__item {
     float: left;
@@ -941,6 +1011,7 @@ img {
   padding-top: 80px;
   padding-bottom: 80px;
 }
+
 @media (min-width: 768px) {
   .pagina-contato {
     padding-left: 150px;
@@ -958,13 +1029,16 @@ img {
   margin-right: -15px;
   padding-right: 15px;
 }
+
 .cabecalho-home__role {
   display: none;
 }
+
 .cabecalho-home__titulo {
   font-size: 30px;
   margin-bottom: 0;
 }
+
 .cabecalho-home__subtitulo {
   display: block;
   font-size: 15px;
@@ -973,6 +1047,7 @@ img {
   margin: auto;
   margin-top: 10px;
 }
+
 @media (min-width: 992px) {
   .cabecalho-home {
     height: 100vh;
@@ -1002,6 +1077,7 @@ img {
     margin-left: -115px;
   }
 }
+
 @media (min-width: 1200px) {
   .cabecalho-home {
     background-image: url(imagens/img/cabecalho-home-bg-xl.jpg);
@@ -1016,8 +1092,9 @@ img {
   margin-top: 55px;
   margin-bottom: 55px;
 }
+
 .home__titulo::after {
-  content: "";
+  content: '';
   display: block;
   width: 50px;
   height: 3px;
@@ -1025,6 +1102,7 @@ img {
   margin: 0px auto;
   margin-top: 15px;
 }
+
 .home__titulo--branco::after {
   background-color: #fff;
 }
@@ -1038,6 +1116,7 @@ img {
   padding-bottom: 100px;
   margin: 0 auto;
   overflow: auto;
+  -webkit-transition: all 400ms ease-out;
   transition: all 400ms ease-out;
   margin-right: -13px;
   z-index: 2;
@@ -1048,12 +1127,15 @@ img {
   padding: 0;
   overflow: hidden;
 }
+
 .lista-trabalhos__item {
   margin-bottom: 50px;
 }
+
 .lista-trabalhos__item a {
   text-decoration: none;
 }
+
 .lista-trabalhos__titulos {
   color: black;
   font-size: 18px;
@@ -1063,12 +1145,14 @@ img {
   border-left: 2.2px solid black;
   padding-left: 5px;
 }
+
 @media (max-width: 768px) {
   .lista-trabalhos__img {
     width: 100%;
     height: auto;
   }
 }
+
 @media (min-width: 768px) {
   .lista-trabalhos__item {
     margin: auto;
@@ -1080,6 +1164,7 @@ img {
     display: block;
   }
 }
+
 @media (min-width: 992px) {
   .lista-trabalhos__img {
     margin: 0;
@@ -1099,11 +1184,14 @@ img {
   }
   .lista-trabalhos__item:hover .lista-trabalhos__img {
     opacity: 0.1;
+    -webkit-transition: all 600ms ease-out;
     transition: all 600ms ease-out;
-    transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
   }
   .lista-trabalhos__item:hover .lista-trabalhos__titulos {
     opacity: 1;
+    -webkit-transition: all 900ms ease-out;
     transition: all 900ms ease-out;
   }
   .lista-trabalhos__titulos {
@@ -1130,7 +1218,8 @@ img {
 .slick-slider {
   position: relative;
   display: block;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -1162,9 +1251,6 @@ img {
 .slick-slider .slick-track,
 .slick-slider .slick-list {
   -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 
@@ -1180,7 +1266,7 @@ img {
 .slick-track:before,
 .slick-track:after {
   display: table;
-  content: "";
+  content: '';
 }
 
 .slick-track:after {
@@ -1198,7 +1284,7 @@ img {
   min-height: 1px;
 }
 
-[dir=rtl] .slick-slide {
+[dir='rtl'] .slick-slide {
   float: right;
 }
 
@@ -1231,3 +1317,172 @@ img {
 .slick-arrow.slick-hidden {
   display: none;
 }
+
+/* Slider */
+.slick-loading .slick-list {
+  background: #fff url("./ajax-loader.gif") center center no-repeat;
+}
+
+/* Icons */
+@font-face {
+  font-family: "slick";
+  src: url("/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/fonts/slick.eot");
+  src: url("/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/fonts/slick.eot?#iefix") format("embedded-opentype"), url("/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/fonts/slick.woff") format("woff"), url("/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/fonts/slick.ttf") format("truetype"), url("/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/fonts/slick.svg#slick") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Arrows */
+.slick-prev,
+.slick-next {
+  position: absolute;
+  display: block;
+  height: 20px;
+  width: 20px;
+  line-height: 0px;
+  font-size: 0px;
+  cursor: pointer;
+  background: transparent;
+  color: transparent;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  padding: 0;
+  border: none;
+  outline: none;
+}
+
+.slick-prev:hover, .slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
+  outline: none;
+  background: transparent;
+  color: transparent;
+}
+
+.slick-prev:hover:before, .slick-prev:focus:before,
+.slick-next:hover:before,
+.slick-next:focus:before {
+  opacity: 1;
+}
+
+.slick-prev.slick-disabled:before,
+.slick-next.slick-disabled:before {
+  opacity: 0.25;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  font-family: "slick";
+  font-size: 20px;
+  line-height: 1;
+  color: white;
+  opacity: 0.75;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-prev {
+  left: -25px;
+}
+
+[dir="rtl"] .slick-prev {
+  left: auto;
+  right: -25px;
+}
+
+.slick-prev:before {
+  content: "←";
+}
+
+[dir="rtl"] .slick-prev:before {
+  content: "→";
+}
+
+.slick-next {
+  right: -25px;
+}
+
+[dir="rtl"] .slick-next {
+  left: -25px;
+  right: auto;
+}
+
+.slick-next:before {
+  content: "→";
+}
+
+[dir="rtl"] .slick-next:before {
+  content: "←";
+}
+
+/* Dots */
+.slick-dotted.slick-slider {
+  margin-bottom: 30px;
+}
+
+.slick-dots {
+  position: absolute;
+  bottom: -25px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.slick-dots li button {
+  border: 0;
+  background: transparent;
+  display: block;
+  height: 20px;
+  width: 20px;
+  outline: none;
+  line-height: 0px;
+  font-size: 0px;
+  color: transparent;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.slick-dots li button:hover, .slick-dots li button:focus {
+  outline: none;
+}
+
+.slick-dots li button:hover:before, .slick-dots li button:focus:before {
+  opacity: 1;
+}
+
+.slick-dots li button:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "•";
+  width: 20px;
+  height: 20px;
+  font-family: "slick";
+  font-size: 6px;
+  line-height: 20px;
+  text-align: center;
+  color: black;
+  opacity: 0.25;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-dots li.slick-active button:before {
+  color: black;
+  opacity: 0.75;
+}
+/*# sourceMappingURL=estilo.css.map */
