--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_formulario.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_formulario.scss
@@ -20,6 +20,10 @@ label.error {
     margin-top: 80px;
     margin-bottom: 80px;
 
+    &_erro {
+        width: 100%;
+        margin: 0 auto;
+    }
 
     &_label {
         padding-bottom: 5px;
