--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_formulario.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_formulario.scss
@@ -11,7 +11,8 @@ label.error {
 }
 
 .formulario {
-    // background-color: #efecec;
+    background-color: #efecec;
+    //background-color: #a4d323;
     margin-left: -15px;
     margin-right: -15px;
     padding: 40px 15px 0px 15px;
