--- a/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_formulario.scss
+++ b/Desenvolvimento Responsivo - HTML-CSS-JS sem os PSD/sass/components/_formulario.scss
@@ -12,7 +12,7 @@ label.error {
 
 .formulario {
     background-color: #efecec;
-    //background-color: #a4d323;
+    //background-color: #ec723a;
     margin-left: -15px;
     margin-right: -15px;
     padding: 40px 15px 0px 15px;
@@ -22,8 +22,27 @@ label.error {
     margin-bottom: 80px;
 
     &_erro {
-        width: 100%;
+
+        background: #e60505;
+        opacity: 0.91;
+        color: #edeff1;
+        text-align: center;
+        width: 80%;
         margin: 0 auto;
+        line-height: 35px;
+        border-radius: 2px;
+    }
+
+    &_certo {
+
+        background: #115c02;
+        opacity: 0.91;
+        color: #edeff1;
+        text-align: center;
+        width: 80%;
+        margin: 0 auto;
+        line-height: 35px;
+        border-radius: 2px;
     }
 
     &_label {
